--- a/www/my_style.css
+++ b/www/my_style.css
@@ -40,14 +40,14 @@
 
 /* datatable selected */
 table.dataTable tr.selected td, table.dataTable td.selected {
-	background-color: black !important;
+	background-color: gray !important;
 	}
 
 /* horizontal line 
 this is not taking effect...
 */
 hr {
-  width: 75%;
+  width: 90%;
   margin: auto;
   height: 5px;
   background-color: orange;
