--- a/www/my_style.css
+++ b/www/my_style.css
@@ -52,3 +52,16 @@ hr {
   height: 5px;
   background-color: orange;
 }
+
+.add_btn {
+  background-color: green;
+}
+.edit_btn {
+  background-color: yellow;
+}
+.delete_btn {
+  background-color: red;
+}
+.add_btn:hover, .edit_btn:hover, .delete_btn:hover {
+  background-color: #090909; 
+}
