--- a/www/my_style.css
+++ b/www/my_style.css
@@ -60,7 +60,7 @@ hr {
   background-color: yellow;
 }
 .delete_btn {
-  background-color: red;
+  background-color: red !important;
 }
 .add_btn:hover, .edit_btn:hover, .delete_btn:hover {
   background-color: #090909; 
